--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body{
     text-align: left;
-    font-family: Arial;
-    color: #333;
+    font-family: Arial, Helvetica, sans-serif;
+    color: red;
     font-size: 16px;
     margin: 0;
     padding: 0;
